# lab4-part2

./: .gitignore  CMakeLists.txt  README.md  plot_errors.py
src/: integration.cpp  integration.hpp  main.cpp  task15_cosh.cpp  task22_frac_simple.cpp
web/: visualize_task22.html
